# turtle

./: .env.example  .gitignore  .gitmodules  CHAN_STRATEGY_GUIDE.md  KLINECHARTS_MIGRATION_GUIDE.md  README.md  create_tables.py  database_optimization.sql  fetch_3year_btc_data.py  fetch_btc_3year_optimized.py  generate_test_data.py  main.py  performance_recommendations.md  pyproject.toml  quick_start.py  requirements.txt  run.py  setup_project.py  test_chan_integration.py  test_chan_strategy.py  turtle.sql  缠论自动交易系统开发计划.md
app/: main.py
app/api/: __init__.py  deps.py
app/core/: config.py  exceptions.py  logger.py
app/crud/: __init__.py  btc_usdt.py  kline.py  kline_dao.py
app/db/: __init__.py  base.py  base_class.py  init_db.py  init_db_command.py  session.py
app/models/: btc_usdt.py  kline.py
app/schemas/: btc_usdt.py  kline.py
app/scripts/: fetch_binance_data.py  simple_fetch_data.py  test_kline_query.py
app/services/: chan_adapter.py  chan_strategy.py  kline_aggregator.py
common/: __init__.py
common/model/: __init__.py  btc_usdt_kline.py  eth_usdt_kline.py  kline_base.py  kline_view_base.py  sol_usdt_kline.py  symbol_enum.py  timeframe_enum.py
conf/: config.yaml
doc/: 快速入门指南.md  系统概述.md
doc/API参考/: API参考.md
doc/sql/: btc_usdt.sql  eth_usdt.sql  sol_usdt.sql  turtle.sql
doc/前端架构/: 交易图表集成.md  前端架构.md
doc/后端架构/: 后端架构.md  数据访问层.md  服务层.md  核心组件.md
frontend/: package-lock.json  package.json  performance_optimization.md  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1756466902582-2b28726afe1f1.mjs
(+164 files in other folders)
